--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
                         <li><i class="fa-solid fa-check text-light me-1"></i>Event Support</li>
                         <li><i class="fa-solid fa-check text-light me-1"></i>Decoration Design</li>
                         <li><i class="fa-solid fa-check text-light me-1"></i>Per day bill</li>
-                        <div class="text-center mt-3"><a class="text-primary text-decoration-none" href="">Choose
+                        <div class="text-center mt-3"><a
+                                class="btn bg-light rounded-pill text-primary text-decoration-none" href="">Choose
                                 plan</a>
                         </div>
                     </ul>
